--- a/index.html
+++ b/index.html
@@ -9,30 +9,24 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
 
     <style>
-        body {
-            margin: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen;
-        }
+        body {width: 100%;height: 100%;margin: 0;padding: 0;}
        #map {position:absolute;top:0;bottom:0;right:0;left:0;}
 
 
         .filtros {
-            position: absolute;
-            top: 12px;
-            left: 12px;
-            z-index: 1000;
-            padding: 12px;
-            border-radius: 12px;
+              position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 1000;
+    background-color: white;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.25);
         }
 
         .filtros select {
-            font-size: 10px;
-            width: 160px;
-            border-radius: 12px;
-            border: 1px solid #ccc;
-            padding: 4px 8px;
-            box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-            background-color: #f7f7f7;
+            width: 200px;
+    margin-bottom: 10px
         }
 
         .choices__inner {
@@ -82,12 +76,29 @@
 </head>
 <body>
     <div class="filtros">
-        <select id="filtroCDD" multiple></select>
-        <select id="filtroGN" multiple></select>
-        <select id="filtroInplant" multiple></select>
-        <select id="filtroRede" multiple></select>
-        <select id="filtroDia" multiple></select>
+        <div style="position: absolute; top: 10px; left: 10px; z-index: 1000; display: flex; gap: 6px; flex-wrap: wrap;">
+<div style="background: rgba(255,255,255,0.6); padding: 4px 6px; border-radius: 4px; font-size: 12px;">
+<label for="cddSelect"><b>CDD:</b></label><br/>
+<select id="filtroCDD" multiple="" size="1" style="width: 100px; font-size: 11px;"></select>
+    </div>
+<div style="background: rgba(255,255,255,0.6); padding: 4px 6px; border-radius: 4px; font-size: 12px;">
+<label for="filtroGN"><b>GN:</b></label><br/>
+<select id="filtroGN" multiple="" size="1" style="width: 120px; font-size: 11px;"></select>
+</div>
+            <div style="background: rgba(255,255,255,0.6); padding: 4px 6px; border-radius: 4px; font-size: 12px;">
+<label for="filtroInplant"><b>Inplant:</b></label><br/>
+<select id="filtroInplant" multiple="" size="1" style="width: 120px; font-size: 11px;"></select>
+</div>
+    
+       <div style="background: rgba(255,255,255,0.6); padding: 4px 6px; border-radius: 4px; font-size: 12px;">
+<label for="filtroRede"><b>Rede:</b></label><br/>
+<select id="filtroRede" multiple="" size="1" style="width: 120px; font-size: 11px;"></select>
+</div>
+        
      </div>
+        <div style="background: rgba(255,255,255,0.6); padding: 4px 6px; border-radius: 4px; font-size: 12px;">
+<label for="filtroDia"><b>Dia:</b></label><br/>
+<select id="filtroDia" multiple="" size="1" style="width: 90px; font-size: 11px;">
     <button id="botaoHeatmap">Ativar Heatmap</button>
     <div id="map"></div>
 
