--- a/index.html
+++ b/index.html
@@ -14,26 +14,27 @@
 
 
         .filtros {
-              position: fixed;
+              position: absolute;
     top: 10px;
     left: 10px;
     z-index: 1000;
-    background-color: white;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+    display: flex;
+    gap: 6px;
+    flex-wrap: wrap;"
+    background-color: rgba(255,255,255,0.6);
+    padding: 4px 6px;
+    
         }
 
         .filtros select {
-            width: 200px;
-    margin-bottom: 10px
+            width: 100px;
+    margin-bottom: 11px
         }
 
         .choices__inner {
-            border-radius: 10px !important;
+            border-radius: 4px !important;
             background-color: #f7f7f7 !important;
-            font-size: 10px;
-            min-height: 32px;
+            font-size: 12px;
             box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
            
         }
