--- a/index.html
+++ b/index.html
@@ -9,26 +9,37 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
 
     <style>
-        body {width: 100%;height: 100%;margin: 0;padding: 0;}
-       #map {position:absolute;top:0;bottom:0;right:0;left:0;}
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
 
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+        }
 
         .filtros {
-              position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 1000;
-    display: flex;
-    gap: 6px;
-    flex-wrap: wrap;"
-    background-color: rgba(255,255,255,0.6);
-    padding: 4px 6px;
-    
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 1000;
+            display: flex;
+            gap: 6px;
+            flex-wrap: wrap;
+            background-color: rgba(255,255,255,0.6);
+            padding: 4px 6px;
+            border-radius: 8px;
         }
 
         .filtros select {
             width: 100px;
-    margin-bottom: 11px
+            margin-bottom: 11px;
         }
 
         .choices__inner {
@@ -36,28 +47,11 @@
             background-color: #f7f7f7 !important;
             font-size: 12px;
             box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
-           
         }
-
 
         .choices[data-type*=select-multiple] .choices__button {
             font-size: 9px;
         }
-#legenda {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  transform: translateX(-50%);
-  z-index: 9998;
-  background: white;
-  border: 1px solid gray;
-  padding: 8px 10px;
-  border-radius: 8px;
-  font-size: 13px;
-  box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
-  max-width: 90vw;
-
-}
 
         #botaoHeatmap {
             position: absolute;
@@ -73,32 +67,48 @@
             box-shadow: 0 1px 2px rgba(0,0,0,0.15);
         }
 
+        #legenda {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 9998;
+            background: transparent;
+            padding: 0;
+            border: none;
+            border-radius: 0;
+            font-size: 12px;
+            box-shadow: none;
+            text-align: center;
+            pointer-events: none;
+        }
     </style>
 </head>
 <body>
-   <div class="filtros">
+    <div class="filtros">
         <select id="filtroCDD" multiple></select>
         <select id="filtroGN" multiple></select>
         <select id="filtroInplant" multiple></select>
         <select id="filtroRede" multiple></select>
         <select id="filtroDia" multiple></select>
-  </div>
+    </div>
+
     <button id="botaoHeatmap">Ativar Heatmap</button>
     <div id="map"></div>
 
+    <div id="legenda">
+        <b>Legenda:</b>
+        <span style="color:red;">● Agenda</span> |
+        <span style="color:blue;">● Segunda</span> |
+        <span style="color:green;">● Terça</span> |
+        <span style="color:purple;">● Quarta</span> |
+        <span style="color:brown;">● Quinta</span> |
+        <span style="color:black;">● Sexta</span> |
+        <span style="color:orange;">● Sábado</span> |
+        <span style="color:darkorange;">🔥 Heatmap</span>
+    </div>
 
-<b>Legenda:</b>
-<span style="color:red;">● Agenda</span> |
-  <span style="color:blue;">● Segunda</span> |
-  <span style="color:green;">● Terça</span> |
-  <span style="color:purple;">● Quarta</span> |
-  <span style="color:brown;">● Quinta</span> |
-  <span style="color:black;">● Sexta</span> |
-  <span style="color:orange;">● Sábado</span> |
-  <span style="color:darkorange;">🔥 Heatmap</span>
-</div>
-
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
@@ -117,8 +127,6 @@
             Rede: new Choices('#filtroRede', { removeItemButton: true, placeholderValue: 'Filtrar por Rede' }),
             Dia: new Choices('#filtroDia', { removeItemButton: true, placeholderValue: 'Dia da Semana' })
         };
-
-
 
         const coresPorDia = {
             'Agenda': 'green',
