--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
       border-radius: 8px;
     }
 
-    P0px;
-      font-size: 11px;
+    .filtros select {
+  width: 200px;
+  font-size: 11px;
+}
     }
 
     .choices__inner {
