--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         let diaValido = false;
         let cor = 'gray';
 
-        for (let dia of diasSelecionados.length ? diasSelecionados : Object.keys(coresPorDia)) {
+        for (let dia of (diasSelecionados.length ? diasSelecionados : Object.keys(coresPorDia))) {
           if (d[dia]?.trim() === '1') {
             diaValido = true;
             cor = coresPorDia[dia] || 'gray';
@@ -181,12 +181,13 @@
             fillColor: cor,
             fillOpacity: 0.8,
             weight: 1
-          }).bindPopup(`
-            <b>${d['Nome']}</b><br>
+          }).bindPopup(
+            `<b>${d['Nome']}</b><br>
             CDD: ${d['CDD']}<br>
             GN: ${d['GN']}<br>
             Inplant: ${d['Inplant']}<br>
-            Rede: ${d['Rede']}`);
+            Rede: ${d['Rede']}`
+          );
 
           grupoMarcadores.addLayer(marker);
         }
@@ -205,6 +206,7 @@
         preencherFiltros(dados, 'GN', filtros.GN);
         preencherFiltros(dados, 'Inplant', filtros.Inplant);
         preencherFiltros(dados, 'Rede', filtros.Rede);
+
         filtros.Dia.clearChoices();
         filtros.Dia.setChoices([
           { value: 'Agenda', label: 'Agenda' },
@@ -217,6 +219,7 @@
         ], 'value', 'label', true);
 
         atualizarMapa(dados);
+
         Object.values(filtros).forEach(f => {
           f.passedElement.element.addEventListener('change', () => atualizarMapa(dados));
         });
