--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
 
     .filtros select {
-      width: 200px;
+      width: 240px;
       font-size: 11px;
     }
 
@@ -74,9 +74,12 @@
       left: 50%;
       transform: translateX(-50%);
       z-index: 1000;
-      background: transparent;
+      background: white;
+      padding: 6px 10px;
+      border-radius: 8px;
       font-size: 12px;
       text-align: center;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.15);
       pointer-events: none;
     }
   </style>
@@ -165,7 +168,7 @@
         let diaValido = false;
         let cor = 'gray';
 
-           for (let dia of (diasSelecionados.length ? diasSelecionados : Object.keys(coresPorDia))) {
+        for (let dia of (diasSelecionados.length ? diasSelecionados : Object.keys(coresPorDia))) {
           if (d[dia]?.trim() === '1') {
             diaValido = true;
             cor = coresPorDia[dia] || 'gray';
@@ -181,12 +184,12 @@
             fillColor: cor,
             fillOpacity: 0.8,
             weight: 1
-            }).bindPopup(
+          }).bindPopup(
             `<b>${d['Nome']}</b><br>
             CDD: ${d['CDD']}<br>
             GN: ${d['GN']}<br>
             Inplant: ${d['Inplant']}<br>
-               Rede: ${d['Rede']}`
+            Rede: ${d['Rede']}`
           );
 
           grupoMarcadores.addLayer(marker);
