--- a/index.html
+++ b/index.html
@@ -55,17 +55,16 @@
     }
 
     #botaoHeatmap {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      z-index: 1000;
-      background-color: white;
-      border: 1px solid #ccc;
-      padding: 6px 12px;
-      border-radius: 10px;
-      cursor: pointer;
-      font-size: 12px;
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+     position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: white; /* Reaplica o fundo branco */
+    padding: 6px 12px;
+    border-radius: 10px;
+    font-size: 12px;
+    font-family: Arial, sans-serif;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+    z-index: 1001;
     }
 
     #legenda {
