--- a/index.html
+++ b/index.html
@@ -26,33 +26,39 @@
     }
 
     .filtros {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      z-index: 1000;
-      display: flex;
-      gap: 6px;
-      flex-wrap: wrap;
-      background-color: rgba(255, 255, 255, 0.6);
-      padding: 6px 8px;
-      border-radius: 8px;
-    }
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    z-index: 1000;
+    padding: 12px;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
 
-    .filtros select {
-      width: 240px;
-      font-size: 11px;
-    }
+.filtros select {
+    font-size: 13px;
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    padding: 6px 10px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    background-color: #f7f7f7;
+}
 
-    .choices__inner {
-      border-radius: 4px !important;
-      background-color: #f7f7f7 !important;
-      font-size: 12px;
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) !important;
-    }
+.choices__inner {
+    border-radius: 10px !important;
+    background-color: #f7f7f7 !important;
+    font-size: 13px;
+    min-height: 38px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
+}
 
-    .choices[data-type*=select-multiple] .choices__button {
-      font-size: 9px;
-    }
+.choices[data-type*=select-multiple] .choices__button {
+    font-size: 10px;
+}
 
     #botaoHeatmap {
      position: absolute;
