--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 .filtros select {
     font-size: 13px;
-    width: 200px;
+    width: 260px; /* AUMENTADO de 200px para 260px */
     height: 40px;
     border-radius: 10px;
     border: 1px solid #ccc;
@@ -54,6 +54,7 @@
     font-size: 13px;
     min-height: 38px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
+    width: 260px !important; /* Garante que o dropdown também acompanhe */
 }
 
 .choices[data-type*=select-multiple] .choices__button {
