--- a/index.html
+++ b/index.html
@@ -27,17 +27,14 @@
 
 .filtros {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 12px;
+    left: 12px;
     z-index: 1000;
+    padding: 12px;
+    border-radius: 12px;
     display: flex;
-    flex-direction: row;     /* agora lado a lado */
-    flex-wrap: wrap;         /* quebra linha se não couber */
+    flex-direction: column;
     gap: 8px;
-    padding: 10px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 0 6px rgba(0,0,0,0.1);
 }
 
 .filtros select {
