--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     padding: 12px;
     border-radius: 12px;
     display: flex;
-    flex-direction: column;
+    flex-direction: Wrap;
     gap: 8px;
 }
 
 .filtros select {
     font-size: 13px;
     width: 200px;
-    height: 38px;
+    height: 40px;
     border-radius: 10px;
     border: 1px solid #ccc;
     padding: 6px 10px;
@@ -54,7 +54,6 @@
     font-size: 13px;
     min-height: 38px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
-    width: 260px !important; /* Garante que o dropdown também acompanhe */
 }
 
 .choices[data-type*=select-multiple] .choices__button {
