--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     padding: 12px;
     border-radius: 12px;
     display: flex;
-    flex-direction: Wrap;
+    flex-direction: row;     
+    flex-wrap: wrap; 
     gap: 8px;
 }
 
