--- a/index.html
+++ b/index.html
@@ -30,18 +30,25 @@
     top: 12px;
     left: 12px;
     z-index: 1000;
-    padding: 12px;
-    border-radius: 12px;
     display: flex;
-    flex-direction: row;     
-    flex-wrap: wrap; 
-    gap: 8px;
+    flex-wrap: wrap;
+    gap: 12px;
+    max-width: calc(100vw - 40px); /* evita estouro horizontal */
+    padding: 10px;
 }
 
-  .filtros select {
-      width: 200px;
-      font-size: 11px;
-    }
+.filtros select {
+    font-size: 13px;
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    padding: 6px 10px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    background-color: #f7f7f7;
+    box-sizing: border-box;
+    flex-shrink: 0; /* evita compressão */
+}
 
 .choices__inner {
     border-radius: 10px !important;
@@ -49,6 +56,7 @@
     font-size: 13px;
     min-height: 38px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
+    box-sizing: border-box;
 }
 
 .choices[data-type*=select-multiple] .choices__button {
